RESOLVED FIXED280056
[iOS] voice activity detection is not working
https://bugs.webkit.org/show_bug.cgi?id=280056
Summary [iOS] voice activity detection is not working
youenn fablet
Reported 2024-09-20 04:33:41 PDT
Attachments
EWS
Comment 1 2024-09-23 10:07:44 PDT
Committed 284084@main (154de6967e0b): <https://commits.webkit.org/284084@main> Reviewed commits have been landed. Closing PR #33973 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.