[iOS] voice activity detection is not working rdar://135942656 https://bugs.webkit.org/show_bug.cgi?id=280056

Reviewed by Eric Carlson.

On iOS, we first need to mute the VPIO unit and then set the voice activity listener.
We rework the listener enablement/disablement code so that it works for both macOS and iOS.

We introduce CoreAudioSharedUnit::shouldEnableVoiceActivityDetection which tells whether voice activity listener should be on.
On iOS, it will return true if VPIO is started, muted and the voice activity callback is set.
On macOS, we do not check whether VPIO is muted as this is not necessary.
This allows tabs that have been muted due to another page capturing to receive notifications of voice activity if the tab is visible.

We introduce CoreAudioSharedUnit::updateVoiceActiveDetection which will call CoreAudioSharedInternalUnit::setVoiceActivityDetection according CoreAudioSharedUnit::shouldEnableVoiceActivityDetection.
CoreAudioSharedUnit::updateVoiceActiveDetection is called from various places when some capture states change.

Tested on macOS and iOS devices.

* Source/WebCore/platform/mediastream/mac/BaseAudioSharedUnit.h:
(WebCore::BaseAudioSharedUnit::hasVoiceActivityListenerCallback const):
* Source/WebCore/platform/mediastream/mac/CoreAudioSharedInternalUnit.h:
* Source/WebCore/platform/mediastream/mac/CoreAudioSharedUnit.cpp:
(WebCore::CoreAudioSharedUnit::~CoreAudioSharedUnit):
(WebCore::CoreAudioSharedUnit::cleanupAudioUnit):
(WebCore::CoreAudioSharedUnit::startInternal):
(WebCore::CoreAudioSharedUnit::isProducingMicrophoneSamplesChanged):
(WebCore::CoreAudioSharedUnit::stopInternal):
* Source/WebCore/platform/mediastream/mac/CoreAudioSharedUnit.h:
* Source/WebCore/platform/mediastream/mac/CoreAudioSharedUnit.mm:
(WebCore::CoreAudioSharedUnit::shouldEnableVoiceActivityDetection const):
(WebCore::CoreAudioSharedUnit::updateVoiceActiveDetection):
(WebCore::CoreAudioSharedInternalUnit::setVoiceActivityDetection):
(WebCore::CoreAudioSharedUnit::enableMutedSpeechActivityEventListener):
(WebCore::CoreAudioSharedUnit::disableMutedSpeechActivityEventListener):
* Source/WebCore/platform/mediastream/mac/MockAudioSharedUnit.mm:
(WebCore::MockAudioSharedInternalUnit::setVoiceActivityDetection):

Canonical link: https://commits.webkit.org/284084@main