Source/WebCore/platform/mediastream/mac/CoreAudioSharedUnit.cpp
@@ -230,6 +230,7 @@ CoreAudioSharedUnit::CoreAudioSharedUnit()
 
 CoreAudioSharedUnit::~CoreAudioSharedUnit()
 {
+    updateVoiceActiveDetection();
 }
 
 #if PLATFORM(MAC)
@@ -563,6 +564,7 @@ void CoreAudioSharedUnit::cleanupAudioUnit()
         m_ioUnitInitialized = false;
     }
 
+    updateVoiceActiveDetection();
     m_ioUnit = nullptr;
 
     m_microphoneSampleBuffer = nullptr;
@@ -648,10 +650,7 @@ OSStatus CoreAudioSharedUnit::startInternal()
     m_microphoneProcsCalled = 0;
     m_microphoneProcsCalledLastTime = 0;
 
-    if (m_shouldSetVoiceActivityListener) {
-        m_ioUnit->setVoiceActivityDetection(true);
-        m_shouldSetVoiceActivityListener = false;
-    }
+    updateVoiceActiveDetection();
 
     return noErr;
 }
@@ -663,6 +662,7 @@ void CoreAudioSharedUnit::isProducingMicrophoneSamplesChanged()
         auto error = m_ioUnit->set(kAUVoiceIOProperty_MuteOutput, kAudioUnitScope_Global, outputBus, &muteUplinkOutput, sizeof(muteUplinkOutput));
         RELEASE_LOG_ERROR_IF(error, WebRTC, "CoreAudioSharedUnit::isProducingMicrophoneSamplesChanged(%p) unable to set kAUVoiceIOProperty_MuteOutput, error %d (%.4s)", this, (int)error, (char*)&error);
     }
+    updateVoiceActiveDetection();
 
     if (!isProducingData())
         return;
@@ -770,6 +770,7 @@ void CoreAudioSharedUnit::stopInternal()
 #if PLATFORM(IOS_FAMILY)
     setIsInBackground(false);
 #endif
+    updateVoiceActiveDetection();
 }
 
 void CoreAudioSharedUnit::registerSpeakerSamplesProducer(CoreAudioSpeakerSamplesProducer& producer)
@@ -803,6 +804,46 @@ void CoreAudioSharedUnit::unregisterSpeakerSamplesProducer(CoreAudioSpeakerSampl
     }
 
     setIsRenderingAudio(false);
+}
+
+bool CoreAudioSharedUnit::shouldEnableVoiceActivityDetection() const
+{
+    return hasVoiceActivityListenerCallback()
+#if PLATFORM(IOS_FAMILY)
+        && !isProducingMicrophoneSamples()
+#endif
+        && m_ioUnitStarted;
+}
+
+void CoreAudioSharedUnit::updateVoiceActiveDetection()
+{
+    if (!m_ioUnit)
+        return;
+
+    if (m_voiceActivityDetectionEnabled) {
+        if (shouldEnableVoiceActivityDetection())
+            return;
+        if (m_ioUnit->setVoiceActivityDetection(false))
+            m_voiceActivityDetectionEnabled = false;
+        return;
+    }
+
+    if (!shouldEnableVoiceActivityDetection())
+        return;
+    if (m_ioUnit->setVoiceActivityDetection(true))
+        m_voiceActivityDetectionEnabled = true;
+}
+
+void CoreAudioSharedUnit::enableMutedSpeechActivityEventListener(Function<void()>&& callback)
+{
+    setVoiceActivityListenerCallback(WTFMove(callback));
+    updateVoiceActiveDetection();
+}
+
+void CoreAudioSharedUnit::disableMutedSpeechActivityEventListener()
+{
+    setVoiceActivityListenerCallback({ });
+    updateVoiceActiveDetection();
 }
 
 #if PLATFORM(IOS_FAMILY)
